--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
         <mockito.version>5.14.2</mockito.version>
         <jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>
         <slf4j.version>2.0.16</slf4j.version>
-        <wicket.version>10.2.0</wicket.version>
+        <wicket.version>10.3.0</wicket.version>
         <yuicompressor.version>2.4.8</yuicompressor.version>
 
         <maven-bundle-plugin.version>6.0.0</maven-bundle-plugin.version>
@@ -392,7 +392,7 @@
                         <links>
                             <link>https://docs.oracle.com/en/java/javase/17/docs/api/</link>
                             <link>https://junit.org/junit5/docs/current/api/</link>
-                            <link>http://www.slf4j.org/apidocs/</link>
+                            <link>https://www.slf4j.org/apidocs/</link>
                         </links>
                     </configuration>
                     <executions>
